--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <h1>Oliver Brachman Strony</h1>
 <ul> 
-  <li> szkielet strony</li>
+  <li a href="stronyy/0_szkieletstrony/szablon.html"> szkielet strony</li>
   <li>1_strona_podstawy</li>
   <li>2_Grafika</li>
   <li>3_Milosz</li>
