--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
 <h1>Oliver Brachman Strony</h1>
 <ul> 
-  <li a href="stronyy/0_szkieletstrony/szablon.html"> szkielet strony</li>
+  <li><a href="stronyy/0_szkieletstrony/szablon.html"> szkielet strony</a></li>
+</ul>
+  <ul>1_strona_podstawy</ul>
   <li>1_strona_podstawy</li>
   <li>2_Grafika</li>
   <li>3_Milosz</li>
