--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   <li><a href="stronyy/0_szkieletstrony/szablon.html"> szkielet strony</a></li>
 </ul>
   <ul>1_strona_podstawy</ul>
+  <li><a href="stronyy/1_strona_podstawy/Formatowanie.html"</a> Formatowanie</a></li>
+  <li><a href="stronyy/1_strona_podstawy/Zwierzeta.html"> zwierzeta</a></li>
+  <li><a href="stronyy/1_strona_podstawy/new 1.html"> new</a></li>
+
   <li>1_strona_podstawy</li>
   <li>2_Grafika</li>
   <li>3_Milosz</li>
