--- a/index.html
+++ b/index.html
@@ -16,11 +16,17 @@
   <li><a href="stronyy/1_strona_podstawy/Formatowanie.html"</a> Formatowanie</a></li>
   <li><a href="stronyy/1_strona_podstawy/Zwierzeta.html"> zwierzeta</a></li>
   <li><a href="stronyy/1_strona_podstawy/new 1.html"> new</a></li>
-
-  <li>1_strona_podstawy</li>
-  <li>2_Grafika</li>
-  <li>3_Milosz</li>
-  <li>4_Tabele</li>
+<ul>2_Grafika</ul>
+ <li><a href="stronyy/2_Grafika/grafika.html">grafika</a></li>
+ <li><a href="stronyy/2_Grafika/index.html">grafika2</a></li>
+  
+<ul>3_Milosz</ul>
+  <li><a href="stronyy/3_Milosz/index.html">index</a>
+  <li><a href="stronyy/3_Milosz/ojczyzna.html">ojczyzna</a>
+  <li><a href="stronyy/3_Milosz/slonce.html">slonce</a>
+  <li><a href="stronyy/3_Milosz/upadek.html">upadek</a>
+  
+  <ul>4_Tabele</ul>
   <li>5_span_div</li>
   <li>6_formularze</li>
   <li>7_Znaki_specjalne</li>
