--- a/index.html
+++ b/index.html
@@ -27,10 +27,30 @@
   <li><a href="stronyy/3_Milosz/upadek.html">upadek</a>
   
   <ul>4_Tabele</ul>
-  <li>5_span_div</li>
-  <li>6_formularze</li>
-  <li>7_Znaki_specjalne</li>
-  <li>8_CSS _wpisany</li>
+    <li><a href="stronyy/4_Tabele/cwiczenie.html">cwiczenie</a>
+    <li><a href="stronyy/4_Tabele/index.html">index</a> 
+  <ul>5_span_div</ul>
+      <li><a href="stronyy/5_span_div/span_div.html">span_div</a>
+  <ul>6_formularze</ul>
+      <li><a href="stronyy/6_formularze/formularze.html">formularze</a>  
+  <ul>7_Znaki_specjalne</ul>
+        <li><a href="stronyy/7_Znaki_specjalne/7_znaki specjalne.html">znaki_spaecjalne</a>  
+  <ul>8_CSS _wpisany</ul>
+            <li><a href="stronyy/7_Znaki_specjalne/7_znaki specjalne.html">znaki_spaecjalne</a>  
+                <li><a href="stronyy/7_Znaki_specjalne/7_znaki specjalne.html">znaki_spaecjalne</a>  
+                <li><a href="stronyy/7_Znaki_specjalne/7_znaki specjalne.html">znaki_spaecjalne</a>  
+                <li><a href="stronyy/7_Znaki_specjalne/7_znaki specjalne.html">znaki_spaecjalne</a>  
+                      <li><a href="stronyy/7_Znaki_specjalne/7_znaki specjalne.html">znaki_spaecjalne</a>  
+                      <li><a href="stronyy/7_Znaki_specjalne/7_znaki specjalne.html">znaki_spaecjalne</a>  
+                      <li><a href="stronyy/7_Znaki_specjalne/7_znaki specjalne.html">znaki_spaecjalne</a>  
+                      <li><a href="stronyy/7_Znaki_specjalne/7_znaki specjalne.html">znaki_spaecjalne</a>  
+                      <li><a href="stronyy/7_Znaki_specjalne/7_znaki specjalne.html">znaki_spaecjalne</a>  
+                      <li><a href="stronyy/7_Znaki_specjalne/7_znaki specjalne.html">znaki_spaecjalne</a>  
+                      <li><a href="stronyy/7_Znaki_specjalne/7_znaki specjalne.html">znaki_spaecjalne</a>  
+                      <li><a href="stronyy/7_Znaki_specjalne/7_znaki specjalne.html">znaki_spaecjalne</a>  
+                      <li><a href="stronyy/7_Znaki_specjalne/7_znaki specjalne.html">znaki_spaecjalne</a>  
+                      <li><a href="stronyy/7_Znaki_specjalne/7_znaki specjalne.html">znaki_spaecjalne</a>  
+                                                                  
   <li>9_osadzony</li>
   <li>10_zewnetrzny</li>
   <li>11_budowa</li>
