--- a/index.html
+++ b/index.html
@@ -36,24 +36,22 @@
   <ul>7_Znaki_specjalne</ul>
         <li><a href="stronyy/7_Znaki_specjalne/7_znaki specjalne.html">znaki_spaecjalne</a>  
   <ul>8_CSS _wpisany</ul>
-            <li><a href="stronyy/7_Znaki_specjalne/7_znaki specjalne.html">znaki_spaecjalne</a>  
-                <li><a href="stronyy/7_Znaki_specjalne/7_znaki specjalne.html">znaki_spaecjalne</a>  
-                <li><a href="stronyy/7_Znaki_specjalne/7_znaki specjalne.html">znaki_spaecjalne</a>  
-                <li><a href="stronyy/7_Znaki_specjalne/7_znaki specjalne.html">znaki_spaecjalne</a>  
-                      <li><a href="stronyy/7_Znaki_specjalne/7_znaki specjalne.html">znaki_spaecjalne</a>  
-                      <li><a href="stronyy/7_Znaki_specjalne/7_znaki specjalne.html">znaki_spaecjalne</a>  
-                      <li><a href="stronyy/7_Znaki_specjalne/7_znaki specjalne.html">znaki_spaecjalne</a>  
-                      <li><a href="stronyy/7_Znaki_specjalne/7_znaki specjalne.html">znaki_spaecjalne</a>  
-                      <li><a href="stronyy/7_Znaki_specjalne/7_znaki specjalne.html">znaki_spaecjalne</a>  
-                      <li><a href="stronyy/7_Znaki_specjalne/7_znaki specjalne.html">znaki_spaecjalne</a>  
-                      <li><a href="stronyy/7_Znaki_specjalne/7_znaki specjalne.html">znaki_spaecjalne</a>  
-                      <li><a href="stronyy/7_Znaki_specjalne/7_znaki specjalne.html">znaki_spaecjalne</a>  
-                      <li><a href="stronyy/7_Znaki_specjalne/7_znaki specjalne.html">znaki_spaecjalne</a>  
-                      <li><a href="stronyy/7_Znaki_specjalne/7_znaki specjalne.html">znaki_spaecjalne</a>  
-                                                                  
-  <li>9_osadzony</li>
-  <li>10_zewnetrzny</li>
-  <li>11_budowa</li>
+  <li><a href="stronyy/8_CSS _wpisany/Kolor.html">kolor.html</a>  
+    <li><a href="stronyy/8_CSS _wpisany/czcionka.html">czcionka</a>  
+    <li><a href="stronyy/8_CSS _wpisany/kolory cwiczenia.html">kolory.cwiczenia</a>  
+      <li><a href="stronyy/8_CSS _wpisany/raciborz.html">raciborz</a>
+       <li><a href="stronyy/8_CSS _wpisany/tecza.html">tecza</a>  
+              <li><a href="stronyy/8_CSS _wpisany/tlon.html">tlon</a>  
+          <li><a href="stronyy/8_CSS _wpisany/word.html">word</a>  
+                 <li><a href="stronyy/8_CSS _wpisany/wymiary.html">wymiary</a>  
+            
+  <ul>9_osadzony</ul>
+  <li><a href="stronyy/10_zewnetrzny/brzechwa.html">brzechwa.html</a></li>  
+  <li><a href="stronyy/10_zewnetrzny/styl_zew.html">styl_zew</a></li>  
+  <ul>10_zewnetrzny</ul>
+   <li><a href="">brzechwa</a></li>  
+   <li><a href="">brzechwa</a></li>  
+  <ul>11_budowa</ul>
 </ul>
 
 
