--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <ul> 
   <li><a href="stronyy/0_szkieletstrony/szablon.html"> szkielet strony</a></li>
 </ul>
-  <ul>1_strona_podstawy</ul>
+  <h2></h2><ul>1_strona_podstawy</ul></h2>
   <li><a href="stronyy/1_strona_podstawy/Formatowanie.html"</a> Formatowanie</a></li>
   <li><a href="stronyy/1_strona_podstawy/Zwierzeta.html"> zwierzeta</a></li>
   <li><a href="stronyy/1_strona_podstawy/new 1.html"> new</a></li>
-<ul>2_Grafika</ul>
+<h2></h2><ul>2_Grafika</ul></h2>
  <li><a href="stronyy/2_Grafika/grafika.html">grafika</a></li>
  <li><a href="stronyy/2_Grafika/index.html">grafika2</a></li>
   
-<ul>3_Milosz</ul>
+<h2></h2><ul>3_Milosz</ul></h2>
   <li><a href="stronyy/3_Milosz/index.html">index</a>
   <li><a href="stronyy/3_Milosz/ojczyzna.html">ojczyzna</a>
   <li><a href="stronyy/3_Milosz/slonce.html">slonce</a>
