--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <meta name="author" content="oliver brachman">
 </head>
 <body>
+  <div style= "background-color:lightgrey; width: 250px ;border: 15px solid grey;padding: 50px;margin: 20px;">
 <h1>Oliver Brachman Strony</h1>
 <ul> 
   <li><a href="stronyy/0_szkieletstrony/szablon.html"> szkielet strony</a></li>
@@ -55,6 +56,6 @@
 </ul>
 
 
-
+  </div>
 </body>
 </html>					   
