--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <meta name="author" content="oliver brachman">
 </head>
 <body>
-  <div style= "background-color:lightgrey; width: 250px ;border: 250px solid grey;padding: 50px;margin: 20px;">
-<h1>Oliver Brachman Strony</h1>
+  <div style= "background-color:lightgrey; width: 250px ;border: 250px solid grey;padding: 200px;margin: 20px;">
+<h1 style="text-aling:center nborder:15px solid rey;padding:15px;margin:20px;">Oliver Brachman Strony</h1>
 <ul> 
   <li><a href="stronyy/0_szkieletstrony/szablon.html"> szkielet strony</a></li>
 </ul>
