--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <meta name="keywords" content="szkoła,lekcje,temat,nauka,html">
 <meta name="author" content="oliver brachman">
 </head>
-<body style=margin:0px.padding:0px>
+<body style=margin:0px;padding:0px>
   <div style= "background-color:lightgrey; width: 250px ;border: 250px solid grey;padding: 200px;margin: 20px;">
-<h1 style="text-aling:center nborder:15px solid rey;padding:15px;margin:20px;">Oliver Brachman Strony</h1>
+<h1 style="text-aling:center ;border:15px solid rey;padding:15px;margin:20px;">Oliver Brachman Strony</h1>
 <ul> 
   <li><a href="stronyy/0_szkieletstrony/szablon.html"> szkielet strony</a></li>
 </ul>
