--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="author" content="oliver brachman">
 </head>
 <body style=margin:0px;padding:0px>
-  <div style= "background-color:lightgrey; width: 250px ;border: 250px solid grey;padding: 200px;margin: 20px;">
+  <div style= "background-color:lightgrey; width: 100% ;border: 250px solid grey;padding: 200px;margin: 20px;">
 <h1 style="text-aling:center ;border:15px solid rey;padding:15px;margin:20px;">Oliver Brachman Strony</h1>
 <ul> 
   <li><a href="stronyy/0_szkieletstrony/szablon.html"> szkielet strony</a></li>
@@ -52,7 +52,7 @@
   <ul>10_zewnetrzny</ul>
    <li><a href="">brzechwa</a></li>  
    <li><a href="">brzechwa</a></li>  
-  <ul>11_budowa</ul>
+  <ul><a href="stronyy/11_budowa/budowa.html">11_budowa</a></ul>
 </ul>
 
 
