--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="author" content="oliver brachman">
 </head>
 <body style="text-align:center;margin:0px;padding:0px">
-  <div style= "background-color:lightgrey; width: 70% ;border: 9% solid grey;padding:10% ;">
+  <div style= "background-color:lightgrey; ;">
 <h1 style=" border:15px solid rey;padding:15px;margin:20px;">Oliver Brachman Strony</h1>
 <ul> 
   <li><a href="stronyy/0_szkieletstrony/szablon.html"> szkielet strony</a></li>
