--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="keywords" content="szkoła,lekcje,temat,nauka,html">
 <meta name="author" content="oliver brachman">
 </head>
-<body style="text-align:center;margin:0px;padding:0px">
+<body style="margin:0px;padding:0px">
   <div style= "background-color:lightgrey; ;">
 <h1 style=" border:15px solid rey;padding:15px;margin:20px;">Oliver Brachman Strony</h1>
 <ul> 
