--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body style="margin:0px;padding:0px">
   <div style= "background-color:lightgrey; ;">
-<h1 style=" border:15px solid rey;padding:15px;margin:20px;">Oliver Brachman Strony</h1>
+<h1 >Oliver Brachman Strony</h1>
 <ul> 
   <li><a href="stronyy/0_szkieletstrony/szablon.html"> szkielet strony</a></li>
 </ul>
