--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <meta name="keywords" content="szkoła,lekcje,temat,nauka,html">
 <meta name="author" content="oliver brachman">
 </head>
-<body style="margin:0px;padding:0px">
+<body style="text-align:center;margin:0px;padding:0px">
   <div style= "background-color:lightgrey; ;">
-<h1 >Oliver Brachman Strony</h1>
+<div style="border:solid 5px black"><h1> Oliver Brachman Strony</h1></div>
 <ul> 
   <li><a href="stronyy/0_szkieletstrony/szablon.html"> szkielet strony</a></li>
 </ul>
