--- a/index.html
+++ b/index.html
@@ -13,30 +13,30 @@
 <ul> 
   <li><a href="stronyy/0_szkieletstrony/szablon.html"> szkielet strony</a></li>
 </ul>
-  <h2></h2><ul>1_strona_podstawy</ul></h2>
+  <h2></h2>1_strona_podstawy</h2><ul>
   <li><a href="stronyy/1_strona_podstawy/Formatowanie.html"</a> Formatowanie</a></li>
   <li><a href="stronyy/1_strona_podstawy/Zwierzeta.html"> zwierzeta</a></li>
-  <li><a href="stronyy/1_strona_podstawy/new 1.html"> new</a></li>
-<h2></h2><ul>2_Grafika</ul></h2>
+  <li><a href="stronyy/1_strona_podstawy/new 1.html"> new</a></li></ul>
+<h2></h2>2_Grafika</h2><ul>
  <li><a href="stronyy/2_Grafika/grafika.html">grafika</a></li>
- <li><a href="stronyy/2_Grafika/index.html">grafika2</a></li>
+ <li><a href="stronyy/2_Grafika/index.html">grafika2</a></li></ul>
   
-<h2></h2><ul>3_Milosz</ul></h2>
+<h2></h2>3_Milosz</h2><ul>
   <li><a href="stronyy/3_Milosz/index.html">index</a>
   <li><a href="stronyy/3_Milosz/ojczyzna.html">ojczyzna</a>
   <li><a href="stronyy/3_Milosz/slonce.html">slonce</a>
-  <li><a href="stronyy/3_Milosz/upadek.html">upadek</a>
+  <li><a href="stronyy/3_Milosz/upadek.html">upadek</a></li></ul>
   
-  <ul>4_Tabele</ul>
+  <h2>4_Tabele<h2><ul>
     <li><a href="stronyy/4_Tabele/cwiczenie.html">cwiczenie</a>
-    <li><a href="stronyy/4_Tabele/index.html">index</a> 
-  <ul>5_span_div</ul>
-      <li><a href="stronyy/5_span_div/span_div.html">span_div</a>
-  <ul>6_formularze</ul>
-      <li><a href="stronyy/6_formularze/formularze.html">formularze</a>  
-  <ul>7_Znaki_specjalne</ul>
-        <li><a href="stronyy/7_Znaki_specjalne/7_znaki specjalne.html">znaki_spaecjalne</a>  
-  <ul>8_CSS _wpisany</ul>
+    <li><a href="stronyy/4_Tabele/index.html">index</a> </li>ul>
+  <h2>5_span_div</h2><ul>
+      <li><a href="stronyy/5_span_div/span_div.html">span_div</a></ul>
+  <h2>6_formularze</ul></h2><ul>
+      <li><a href="stronyy/6_formularze/formularze.html">formularze</a></ul>  
+  <h2>7_Znaki_specjalne</h2><ul>
+        <li><a href="stronyy/7_Znaki_specjalne/7_znaki specjalne.html">znaki_spaecjalne</a></ul>  
+  <h2>8_CSS _wpisany</h2><ul>
   <li><a href="stronyy/8_CSS _wpisany/Kolor.html">kolor.html</a>  
     <li><a href="stronyy/8_CSS _wpisany/czcionka.html">czcionka</a>  
     <li><a href="stronyy/8_CSS _wpisany/kolory cwiczenia.html">kolory.cwiczenia</a>  
@@ -44,14 +44,14 @@
        <li><a href="stronyy/8_CSS _wpisany/tecza.html">tecza</a>  
               <li><a href="stronyy/8_CSS _wpisany/tlon.html">tlon</a>  
           <li><a href="stronyy/8_CSS _wpisany/word.html">word</a>  
-                 <li><a href="stronyy/8_CSS _wpisany/wymiary.html">wymiary</a>  
+                 <li><a href="stronyy/8_CSS _wpisany/wymiary.html">wymiary</a></ul>  
             
-  <ul>9_osadzony</ul>
+  <h2>9_osadzony</h2><ul>
   <li><a href="stronyy/10_zewnetrzny/brzechwa.html">brzechwa.html</a></li>  
-  <li><a href="stronyy/10_zewnetrzny/styl_zew.html">styl_zew</a></li>  
-  <ul>10_zewnetrzny</ul>
+  <li><a href="stronyy/10_zewnetrzny/styl_zew.html">styl_zew</a></li>  </ul>
+  <h2>10_zewnetrzny</h2><ul>
    <li><a href="">brzechwa</a></li>  
-   <li><a href="">brzechwa</a></li>  
+   <li><a href="">brzechwa</a></li>  </ul>
   <ul><a href="stronyy/11_budowa/budowa.html">11_budowa</a></ul>
 </ul>
 
