--- a/index.html
+++ b/index.html
@@ -13,38 +13,38 @@
 <ul> 
   <li><a href="stronyy/0_szkieletstrony/szablon.html"> szkielet strony</a></li>
 </ul>
-  <h2></h2>1_strona_podstawy</h2><ul>
+  <h2>1_strona_podstawy</h2><ul>
   <li><a href="stronyy/1_strona_podstawy/Formatowanie.html"</a> Formatowanie</a></li>
   <li><a href="stronyy/1_strona_podstawy/Zwierzeta.html"> zwierzeta</a></li>
   <li><a href="stronyy/1_strona_podstawy/new 1.html"> new</a></li></ul>
-<h2></h2>2_Grafika</h2><ul>
+<h2>2_Grafika</h2><ul>
  <li><a href="stronyy/2_Grafika/grafika.html">grafika</a></li>
  <li><a href="stronyy/2_Grafika/index.html">grafika2</a></li></ul>
   
-<h2></h2>3_Milosz</h2><ul>
-  <li><a href="stronyy/3_Milosz/index.html">index</a>
-  <li><a href="stronyy/3_Milosz/ojczyzna.html">ojczyzna</a>
-  <li><a href="stronyy/3_Milosz/slonce.html">slonce</a>
+<h2>3_Milosz</h2><ul>
+  <li><a href="stronyy/3_Milosz/index.html">index</a></li>
+  <li><a href="stronyy/3_Milosz/ojczyzna.html">ojczyzna</a></li>
+  <li><a href="stronyy/3_Milosz/slonce.html">slonce</a></li>
   <li><a href="stronyy/3_Milosz/upadek.html">upadek</a></li></ul>
   
   <h2>4_Tabele<h2><ul>
-    <li><a href="stronyy/4_Tabele/cwiczenie.html">cwiczenie</a>
+    <li><a href="stronyy/4_Tabele/cwiczenie.html">cwiczenie</a></li>
     <li><a href="stronyy/4_Tabele/index.html">index</a> </li>ul>
   <h2>5_span_div</h2><ul>
-      <li><a href="stronyy/5_span_div/span_div.html">span_div</a></ul>
+      <li><a href="stronyy/5_span_div/span_div.html">span_div</a></li></ul>
   <h2>6_formularze</ul></h2><ul>
-      <li><a href="stronyy/6_formularze/formularze.html">formularze</a></ul>  
+      <li><a href="stronyy/6_formularze/formularze.html">formularze</a></li></ul>  
   <h2>7_Znaki_specjalne</h2><ul>
-        <li><a href="stronyy/7_Znaki_specjalne/7_znaki specjalne.html">znaki_spaecjalne</a></ul>  
+        <li><a href="stronyy/7_Znaki_specjalne/7_znaki specjalne.html">znaki_spaecjalne</a></li></ul>  
   <h2>8_CSS _wpisany</h2><ul>
-  <li><a href="stronyy/8_CSS _wpisany/Kolor.html">kolor.html</a>  
-    <li><a href="stronyy/8_CSS _wpisany/czcionka.html">czcionka</a>  
-    <li><a href="stronyy/8_CSS _wpisany/kolory cwiczenia.html">kolory.cwiczenia</a>  
-      <li><a href="stronyy/8_CSS _wpisany/raciborz.html">raciborz</a>
-       <li><a href="stronyy/8_CSS _wpisany/tecza.html">tecza</a>  
-              <li><a href="stronyy/8_CSS _wpisany/tlon.html">tlon</a>  
-          <li><a href="stronyy/8_CSS _wpisany/word.html">word</a>  
-                 <li><a href="stronyy/8_CSS _wpisany/wymiary.html">wymiary</a></ul>  
+  <li><a href="stronyy/8_CSS _wpisany/Kolor.html">kolor.html</a> </li>
+    <li><a href="stronyy/8_CSS _wpisany/czcionka.html">czcionka</a> </li> 
+    <li><a href="stronyy/8_CSS _wpisany/kolory cwiczenia.html">kolory.cwiczenia</a>  </li>
+      <li><a href="stronyy/8_CSS _wpisany/raciborz.html">raciborz</a></li>
+       <li><a href="stronyy/8_CSS _wpisany/tecza.html">tecza</a> </li> 
+              <li><a href="stronyy/8_CSS _wpisany/tlon.html">tlon</a>  </li>
+          <li><a href="stronyy/8_CSS _wpisany/word.html">word</a>  </li>
+                 <li><a href="stronyy/8_CSS _wpisany/wymiary.html">wymiary</a></li></ul>  
             
   <h2>9_osadzony</h2><ul>
   <li><a href="stronyy/10_zewnetrzny/brzechwa.html">brzechwa.html</a></li>  
