--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="author" content="oliver brachman">
 </head>
 <body style="text-align:center;margin:0px;padding:0px">
-  <div style= "background-color:lightgrey; ;">
+  <div style= "background-color:lightgrey;width:700px ;">
 <div style="border:solid 5px black"><h1> Oliver Brachman Strony</h1></div>
 <ul> 
   <li><a href="stronyy/0_szkieletstrony/szablon.html"> szkielet strony</a></li>
