--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="author" content="oliver brachman">
 </head>
 <body style="text-align:center;margin:0px;padding:0px">
-  <div style= "background-color:lightgrey;width:700px ;">
+  <div style= "background-color:lightgrey;width:700px ;margin-left:auto;margin-right:auto;">
 <div style="border:solid 5px black"><h1> Oliver Brachman Strony</h1></div>
 <ul> 
   <li><a href="stronyy/0_szkieletstrony/szablon.html"> szkielet strony</a></li>
@@ -27,9 +27,9 @@
   <li><a href="stronyy/3_Milosz/slonce.html">slonce</a></li>
   <li><a href="stronyy/3_Milosz/upadek.html">upadek</a></li></ul>
   
-  <h2>4_Tabele<h2><ul>
+  <h2>4_Tabele</h2><ul>
     <li><a href="stronyy/4_Tabele/cwiczenie.html">cwiczenie</a></li>
-    <li><a href="stronyy/4_Tabele/index.html">index</a> </li>ul>
+    <li><a href="stronyy/4_Tabele/index.html">index</a> </li></ul>
   <h2>5_span_div</h2><ul>
       <li><a href="stronyy/5_span_div/span_div.html">span_div</a></li></ul>
   <h2>6_formularze</ul></h2><ul>
