--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="keywords" content="szkoła,lekcje,temat,nauka,html">
 <meta name="author" content="oliver brachman">
 </head>
-<body style="text-align:center;margin:0px;padding:0px">
+<body style="text-align:center;margin:0px;padding:0px;background-color:#212121;">
   <div style= "background-color:lightgrey;width:1000px ;margin-left:auto;margin-right:auto;">
 <div style="border:solid 5px black"><h1> Oliver Brachman Strony</h1></div>
 <ul> 
