--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body style="text-align:center;margin:0px;padding:0px;background-color:#212121;">
   <div style= "background-color:lightgrey;width:1000px ;margin-left:auto;margin-right:auto;">
-<div style="border:solid 5px black;background-color:#616161;"><h1> Oliver Brachman Strony</h1></div>
+<div style="border:solid 5px black;background-color:#CC9999;"><h1> Oliver Brachman Strony</h1></div>
 
   <a href="stronyy/0_szkieletstrony/szablon.html"> szkielet strony</a>
 
