--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="author" content="oliver brachman">
 </head>
 <body style="text-align:center;margin:0px;padding:0px;background-color:#CC9999;">
-  <div style= "background-color:lightgrey;width:1000px;hight:80% ;margin-left:auto;margin-right:auto;">
+  <div style= "background-color:lightgrey;width:1000px;height:80% ;margin-left:auto;margin-right:auto;">
 <div style="border:solid 5px black;background-color:#C4C4C4;"><h1> Oliver Brachman Strony</h1></div>
 
   <a href="stronyy/0_szkieletstrony/szablon.html"> szkielet strony</a>
