--- a/stronyy/11_budowa/urz wej.html
+++ b/stronyy/11_budowa/urz wej.html
@@ -28,5 +28,6 @@ Parametry skanera:</p>
 <li>technologia CCD lub CMOS, </li>
 <li>zoom optyczny i cyfrowy.</li>
 <div class="linia"></div>
+    <a href="budowa.html">powrót do strony głównej</a>
 </body>
 </html>					   
