--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
    <a href="index2.html">Stare strony</a>
     <h2>11_Budowa</h2>
   <ul><a href="stronyy/11_budowa/budowa.html">11_budowa</a></ul>
-   <ul><a href="brzechwa.html">Brzechwa</a></ul>
+
+   <ul><a href="brzechwa.html"><h1></h1>Brzechwa</h1></a></ul>
 </ul>
 
 
