--- a/stronyy/11_budowa/jednostka centr.html
+++ b/stronyy/11_budowa/jednostka centr.html
@@ -85,6 +85,7 @@ Przykłady:</p>
 <div class="linia"></div>
 <h2 id ="6">Obudowa komputera</h2>
 <p>Jest jak gdyby skóra komputera. W jej wnętrzu umieszczana jest jednostka centralna wraz z kartami rozszerzeń. Rodzaj obudowy może zadecydować o rodzaju płyty głównej umieszczonej wewnątrz niej, a co za tym idzie również o innych parametrach komputera (rodzaj procesora, ilość pamięci czy kart rozszerzeń). Rozmieszczenie elementów na płycie głównej jest standaryzowane (np. ATX).</p>
-  <a href="budowa.html">powrót do strony głównej</a>
+  <a class="kolor" href="budowa.html">powrót do strony głównej</a>
+  
 </body>
 </html>					   
