--- a/stronyy/11_budowa/urz wyj.html
+++ b/stronyy/11_budowa/urz wyj.html
@@ -30,6 +30,6 @@ Typy monitorów:</p>
 <li>częstotliwość odświeżania - ilość obrazów wyświetlanych na ekranie w ciągu 1 sekundy, podawana w Hz,</li>
 <li>plamka - odległość na ekranie dwóch punktów o tej samej barwie, decyduje o dokładności odwzorowania obrazów,</li>
 <li>rozdzielczość - max. ilość punktów w poziomie i pionie możliwych do wyświetlenia bez straty jakości.</li> 
-    <a href="budowa.html">powrót do strony głównej</a>
+    <a class="kolor" href="budowa.html">powrót do strony głównej</a>
 </body>
 </html>					   
