--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
  <h1>Stare strony<h1>
    <a href="index2.html">Stare strony</a>
-    <h2>11_Budowa</h2>
+    <h1>11_Budowa</h1>
   <ul><a href="stronyy/11_budowa/budowa.html">11_budowa</a></ul>
-
+<h1>Budowa</h1>
    <ul><a href="brzechwa.html"><h1></h1>Brzechwa</h1></a></ul>
 </ul>
 
