--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    <a href="index2.html">Stare strony</a>
     <h1>11_Budowa</h1>
   <ul><a href="stronyy/11_budowa/budowa.html">11_budowa</a></ul>
-<h1>Budowa</h1>
+<h1>Brzechwa</h1>
    <ul><a href="brzechwa.html"><h1></h1>Brzechwa</h1></a></ul>
 </ul>
 
