--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 <h1>Brzechwa</h1>
    <ul><a href="brzechwa.html"><h1></h1>Brzechwa</h1></a></ul>
 </ul>
+   <ul>
+   <h1>Szablony</h1>
+    <ul><a href="szablony1.html"><h1></h1>Szablon1</h1></a></ul>
+   <ul><a href="szablony2.html"><h1></h1>Szablon2</h1></a></ul>
+   </ul>
 
 
   </div>
