--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 
   <a href="stronyy/0_szkieletstrony/szablon.html"> szkielet strony</a>
 
- <h1>Stare strony<h1>
+ <h1>Stare strony</h1>
    <a href="index2.html">Stare strony</a>
     <h1>11_Budowa</h1>
   <ul><a href="stronyy/11_budowa/budowa.html">11_budowa</a></ul>
 <h1>Brzechwa</h1>
-   <ul><a href="brzechwa.html"><h1></h1>Brzechwa</h1></a></ul>
+  <ul><a href="brzechwa.html"><h1></h1>Brzechwa</h1></a></ul>
 </ul>
    <ul>
    <h1>Szablony</h1>
-    <ul><a href="szablony1.html"><h1></h1>Szablon1</h1></a></ul>
-   <ul><a href="szablony2.html"><h1></h1>Szablon2</h1></a></ul>
+  <ul><a href="szablony1.html"><h1></h1>Szablon1</h1></a></ul>
+  <ul><a href="szablony2.html"><h1></h1>Szablon2</h1></a></ul>
    </ul>
 
 
