--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 </ul>
    <ul>
    <h1>Szablony</h1>
-  <li><a href="szablony1.html"><h1></h1>Szablon1</h1></a></li>
-  <li><a href="szablony2.html"><h1></h1>Szablon2</h1></a></li>
+  <li><a href="Szablony/szablony1.html"><h1></h1>Szablon1</h1></a></li>
+  <li><a href="Szablony/szablony2.html"><h1></h1>Szablon2</h1></a></li>
    </ul>
 
 
