--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
    <h1>Szablony</h1>
   <li><a href="Szablony/szablony1.html"><h1></h1>Szablon1</h1></a></li>
   <li><a href="Szablony/szablony2.html"><h1></h1>Szablon2</h1></a></li>
+  <li><a href="Szablony/szablony3.html"><h1></h1>Szablon3</h1></a></li>
    </ul>
 
 
