--- a/Szablony/szablony3.html
+++ b/Szablony/szablony3.html
@@ -9,7 +9,7 @@
 <div id="tytul">Moja wioska</div>
 <div style="clear: both;"></div>
 </div>
-
+<div id="nav">Fontanna|Zielone Centrum|Hawana</div>
 <div id="left">Menu
 <ul>
 <li><a href="https://pl.wikipedia.org/wiki/Pietrowice_Wielkie_(gmina)">Gmina Pietrowice Wielkie</a></li>
