--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <li><a href="Szablony/szablony2.html"><h1></h1>Szablon2</h1></a></li>
   <li><a href="Szablony/szablony3.html"><h1></h1>Szablon3</h1></a></li>
    </ul>
-   <h1>JavaSkript</h1>
+   <h1>JavaScript</h1>
     <ul>
       <li><a href="JavaScript/1.html">Kalendarz</li>
       <li><a href="JavaScript/java.html">zegar,kolorowa figura</li>
