--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
       <li><a href="JavaScript/5.html">spadające jabłka</li>
       <li><a href="JavaScript/cytaty.html">losowe cytaty</li>
     </ul>
+    <ul>
+      <h1>Galeria</h1>
+      <li><a href="galeria/galeria.html">Galeria</li>
+    </ul>
 
 
   </div>
