--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="author" content="oliver brachman">
 </head>
 <body style="text-align:center;margin:0px;padding:0px;background-image: url('pzw.jpg');">
-  <div style= "background-color:#ccc;opacity:0.7;width:1000px;height:80% ;margin-left:auto;margin-right:auto;">
+  <div style= "background-color:#ccc;opacity:0.7;width:1000px;height:80% ;">
 <div style="border:solid 5px black;background-color:#C4C4C4;"><h1> Oliver Brachman Strony</h1></div>
 
   <a href="stronyy/0_szkieletstrony/szablon.html"> szkielet strony</a>
@@ -29,10 +29,10 @@
    </ul>
    <h1>JavaScript</h1>
     <ul>
-      <li><a href="JavaScript/1.html">Kalendarz</li>
-      <li><a href="JavaScript/java.html">zegar,kolorowa figura</li>
-      <li><a href="JavaScript/5.html">spadające jabłka</li>
-      <li><a href="JavaScript/cytaty.html">losowe cytaty</li>
+      <li><a href="JavaScript/1.html">Kalendarz</a></li>
+      <li><a href="JavaScript/java.html">zegar,kolorowa figura</a></li>
+      <li><a href="JavaScript/5.html">spadające jabłka</a></li>
+      <li><a href="JavaScript/cytaty.html">losowe cytaty</a></li>
     </ul>
   <h1>Bloki semnatyczne</h1>
     <ul>
