--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="author" content="oliver brachman">
 </head>
 <body style="text-align:center;margin:0px;padding:0px;background-image: url('pzw.jpg');">
-  <div style= "background-color:#ccc;opacity:0.7;width:1000px;height:80% ;">
+  <div style= "background-color:#ccc;opacity:0.7;width:1000px;height:80% ;margin-right:auto;margin-left:auto;">
 <div style="border:solid 5px black;background-color:#C4C4C4;"><h1> Oliver Brachman Strony</h1></div>
 
   <a href="stronyy/0_szkieletstrony/szablon.html"> szkielet strony</a>
