--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body style="text-align:left;margin:0px;padding:0px;background-image: url('pzw.jpg');">
   <div style= "background-color:#ccc;opacity:0.7;width:1000px;height:80% ;margin-right:auto;margin-left:auto;">
-<div style="border:solid 5px black;background-color:#C4C4C4;"><h1> Oliver Brachman Strony</h1></div>
+<div style="border:solid 5px black;background-color:#C4C4C4;"><h1 align=center> Oliver Brachman Strony</h1></div>
 
   <a href="stronyy/0_szkieletstrony/szablon.html"> szkielet strony</a>
 
