--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </ul>
   <h1>Bloki semnatyczne</h1>
     <ul>
-     <li><a href="Bloki_HTML5/index.html">bloki semantyczne</li>
+     <li><a href="Bloki_HTML5/index.html">bloki semantyczne</a></li>
     </ul>
       <h1>Galeria</h1>
     <ul>
