--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
     <ul>
       <li><a href="galeria/galeria.html">Galeria</li>
     </ul>
+    <h1>Multimedia</h1>
+    <ul>
+      <li><a href="multimedia/multimedia.html">Multimedia</li>
+    </ul>
     
 
 
