--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
     </ul>
       <h1>Galeria</h1>
     <ul>
-      <li><a href="galeria/galeria.html">Galeria</li>
+      <li><a href="galeria/galeria.html">Galeria</li></a>
     </ul>
     <h1>Multimedia</h1>
     <ul>
-      <li><a href="multimedia/multimedia.html">Multimedia</li>
+      <li><a href="multimedia/multimedia.html">Multimedia</li></a>
     </ul>
     
 
