--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
     <ul>
       <li><a href="multimedia/multimedia.html">Multimedia</li></a>
     </ul>
+    <h1>Canvas</h1>
+    <ul>
+       <li><a href="Canvas/canvas.html">canvas1</li></a>
+       <li><a href="Canvas/canvas1.html">canvas2</li></a>
+       <li><a href="Canvas/canvas2.html">canvas3</li></a>
+       <li><a href="Canvas/canvas3.html">canvas4</li></a>
+    </ul>
     
 
 
