--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
        <li><a href="Canvas/canvas2.html">canvas3</li></a>
        <li><a href="Canvas/canvas3.html">canvas4</li></a>
     </ul>
+    <h1>Strona zaliczeniowa</h1>
     
 
 
