--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
        <li><a href="Canvas/canvas3.html">canvas4</li></a>
     </ul>
     <h1>Strona zaliczeniowa</h1>
-      <li><a href="strona zaliczeniowa/strona zaliczeniowa.html">canvas4</li></a>
+      <li><a href="strona zaliczeniowa/strona zaliczeniowa.html">strona zaliczeniowa</li></a>
     
 
 
