--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
        <li><a href="Canvas/canvas2.html">canvas3</li></a>
        <li><a href="Canvas/canvas3.html">canvas4</li></a>
     </ul>
+    <h1>PHP podstawy</h1>
+    <ul>
+      <li><a href="PHP_podstawy/1_podstawy_PHP.PHP">strona zaliczeniowa</li></a>
+    </ul>
     <h1>Strona zaliczeniowa</h1>
       <li><a href="strona zaliczeniowa/strona zaliczeniowa.html">strona zaliczeniowa</li></a>
     
