--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </ul>
     <h1>PHP podstawy</h1>
     <ul>
-      <li><a href="PHP_podstawy/1_podstawy_PHP.PHP">strona zaliczeniowa</li></a>
+      <li><a href="PHP_podstawy/1_podstawy_PHP">1_podstawy_PHP</li></a>
     </ul>
     <h1>Strona zaliczeniowa</h1>
       <li><a href="strona zaliczeniowa/strona zaliczeniowa.html">strona zaliczeniowa</li></a>
