--- a/Canvas/canvas.html
+++ b/Canvas/canvas.html
@@ -26,7 +26,7 @@ ctx.stroke();
 var c = document.getElementById("myCanvas");
 var ctx = c.getContext("2d");
 ctx.font = "30px Arial";
-ctx.fillText("Oliver", 10, 50);
+ctx.fillText("MISIEK BOSS!!", 10, 50);
 </script>
 </canvas>
 </script>
@@ -48,4 +48,5 @@ ctx.stroke();
 </canvas>
 
 </body>
+
 </html>					   
